# Arduino-DS1881_2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  keywords.txt  library.properties
.github/workflows/: arduino-lint.yaml  aruino-cpp-test.yaml
extras/test/: CMakeLists.txt
extras/test/fakes/: I2CDevice.h
src/: DS1881_2.h  MaximDS.cpp  MaximDS.h
test/tests/: UnitTests.cpp
